automatically use small font on small dispays within gallery (avoid overlap)

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -398,8 +398,13 @@ kbd {
   box-shadow: $shadow;
   margin: 10px !important;
   border: 0px !important;
+  
   position:relative !important;
   flex-shrink: 0.1;
+  
+  @media #{$medium} {
+    max-width: 100%;
+  }
 }
 
 .examplel, .exampler {
@@ -453,6 +458,9 @@ kbd {
       &:active {
         box-shadow: $active-shadow;
       }
+    }
+    @media #{$medium} {
+      font-size: 0.5em;
     }
   }
 }
